tests/bad/super_in_base_class.td
/// fail: This class doesn't have a super class

class Foo {
    def foo(this) => super.foo()
}